# wagtailstreamforms

./: .gitignore  README.md  pyproject.toml  requirements.txt
example/: models.py  settings.py  urls.py  wagtail_hooks.py  wagtailstreamforms_fields.py  wagtailstreamforms_hooks.py
example/migrations/: 0003_formindexpage_alter_advancedformsetting_id_formpage_and_more.py  0003_formindexpage_remove_basicpage_page_ptr_formpage_and_more.py  0003_formindexpage_rename_basicpage_formpage_and_more.py
example/templates/example/: form_index_page.html  form_page.html  rich_text_widget.html
wagtailstreamforms/: fields.py  wagtail_hooks.py
wagtailstreamforms/migrations/: 0004_alter_form_id_alter_form_slug_and_more.py  0004_remove_form_error_message_and_more.py  0004_remove_form_error_message_remove_form_template_name_and_more.py
wagtailstreamforms/models/: form.py
wagtailstreamforms/static/: blocks.css
wagtailstreamforms/templates/modeladmin/wagtailstreamforms/form/: index.html
wagtailstreamforms/templates/streamforms/: form_block.html
wagtailstreamforms/utils/: general.py
wagtailstreamforms/views/: copy.py
